objects/Hotfix_With_Component__c.object
<CustomObject>
    <description>Junction Object between Hotfix Object and the component object</description>
    <fields>
        <fullName>ComponentName__c</fullName>
        <formula>Component__r.FieldName__c</formula>
        <label>Component Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <label>Component</label>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>Hotfix With Component</relationshipLabel>
        <relationshipName>Hotfix_With_Component</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Hotfix__c</fullName>
        <label>Hotfix</label>
        <referenceTo>Hotfix__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Hotfix_With_Component</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ReleaseName__c</fullName>
        <formula>Hotfix__r.Release__r.Name</formula>
        <label>Release</label>
        <type>Text</type>
    </fields>
    <label>Hotfix With Component</label>
    <nameField>
        <displayFormat>Component-{000}</displayFormat>
        <label>Hotfix With Components</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hotfix With Component</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>